Add missing table headings

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -441,25 +441,25 @@
   {% endif %}
   {% if object.interchangeable_backs is not None %}
   <tr>
-    <td></td>
+    <td>Interchangeable backs</td>
     <td>{{ object.interchangeable_backs|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.interchangeable_finders is not None %}
   <tr>
-    <td></td>
+    <td>Interchangeable finders</td>
     <td>{{ object.interchangeable_finders|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.strap_lugs is not None %}
   <tr>
-    <td></td>
+    <td>Strap lugs</td>
     <td>{{ object.strap_lugs|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.multiple_exposures is not None %}
   <tr>
-    <td></td>
+    <td>Multiple exposures</td>
     <td>{{ object.multiple_exposures|boolicontag }}</td>
   </tr>
   {% endif %}
