--- a/help/templates/faq.html
+++ b/help/templates/faq.html
@@ -28,7 +28,21 @@
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">I have a suggestion for CameraHub</h5>
         </div>
-        <p class="mb-1">Great! I'd love to hear it. Add an issue on Github or contact us via our Facebook page.</p>
+        <p class="mb-1">Great! I'd love to hear it. Add an issue on Github or contact us via our Facebook page - icons are below.</p>
+    </a>
+
+    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">What about language support?</h5>
+        </div>
+        <p class="mb-1">CameraHub is in UK English. It is not currently on the roadmap to translate the site into other
+            languages.</p>
+        <p class="mb-1">Regarding the data inside CameraHub, it is always preferred to use Latin characters. For example
+            we prefer <em>Zorki</em> instead of <em>Зоркий</em>.</p>
+        <p>If a camera has different names in different regions, The UK or European name is preferred. For example, the
+            <em>Canon EOS 500</em> was marketed as the <em>Canon EOS 500</em> in Europe, Asia and Oceania, as the
+            <em>Canon EOS Kiss</em> in Japan and the <em>Canon EOS Rebel XS</em> in America. There is a feature on the
+            roadmap to support multiple names for cameras.</p>
     </a>
 </div>
 {% endblock %}
