Add favicons generated at realfavicongenerator.net

--- a/schema/templates/base.html
+++ b/schema/templates/base.html
@@ -10,6 +10,7 @@
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% include "favicon.html" %}
 </head>
 
 <body>
