--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load boolicontag %}
 {% load formatting %}
+{% load model_field %}
 
 {% block content %}
 {% if object.image %}
@@ -20,7 +21,7 @@
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
-    <td>Manufacturer</td>
+    <td>Manufacturer <abbr title="{% model_field_help_text from cameramodel.manufacturer %}"><img src="{% static "svg/info.svg" %}" width="16" height="16" alt="Info"></abbr></td>
     <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a></td>
   </tr>
   {% endif %}
