Make detail headings be a self link

--- a/schema/templates/detail.html
+++ b/schema/templates/detail.html
@@ -3,8 +3,9 @@
 
 {% block heading %}{% include "heading.html" %}{%endblock%}
 
-{% block subheading %}<h4>{{ object }}<a href="{{ object.get_absolute_url }}/update"><img
-      src="{% static "svg/edit.svg" %}" width="20" height="20" alt="Edit"></a></h4>{%endblock%}
+{% block subheading %}<h4><a href="{{ object.get_absolute_url }}">{{ object }}</a><a
+            href="{{ object.get_absolute_url }}/update"><img src="{% static "svg/edit.svg" %}" width="20" height="20"
+                  alt="Edit"></a></h4>{%endblock%}
 
 {% block content %}{%endblock%}
 
