Display country flags next to manufacturer name in detail and list view

--- a/schema/templates/schema/manufacturer_detail.html
+++ b/schema/templates/schema/manufacturer_detail.html
@@ -15,7 +15,8 @@
   {% if object.country is not None %}
   <tr>
     <td>Country</td>
-    <td>{{ object.country }}</td>
+    <td>{{ object.country.name }} <img src="{{ object.country.flag }}"
+        alt="{{ object.country.code }}"></td>
   </tr>
   {% endif %}
   {% if object.url is not None %}
