--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -5,7 +5,9 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a></td>
+    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}
+        {% if object.manufacturer.country %}<img src="{{ object.manufacturer.country.flag }}" 
+          alt="{{ object.manufacturer.country.code }}">{% endif %}</a></td>
   </tr>
   {% endif %}
   <tr>
@@ -54,7 +56,7 @@
     <td>{{ object.discontinued }}</td>
   </tr>
   {% endif %}
-    {% if object.cost is not None %}
+  {% if object.cost is not None %}
   <tr>
     <td>Cost</td>
     <td>{{ object.cost }}</td>
