--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -10,7 +10,9 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a></td>
+    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}
+        {% if object.manufacturer.country %}<img src="{{ object.manufacturer.country.flag }}" 
+          alt="{{ object.manufacturer.country.code }}">{% endif %}</a></td>
   </tr>
   {% endif %}
   {% if object.iso is not None %}
