Move manufacturer flag rendering out to a template

--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -9,9 +9,7 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}
-        {% if object.manufacturer.country %}<img src="{{ object.manufacturer.country.flag }}" 
-          alt="{{ object.manufacturer.country.code }}">{% endif %}</a></td>
+    <td>{% include "manufacturer.html" with manufacturer=object.manufacturer %}</td>
     {% endif %}
   </tr>
   <tr>
