--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -21,9 +21,7 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}
-        {% if object.manufacturer.country %}<img src="{{ object.manufacturer.country.flag }}"
-          alt="{{ object.manufacturer.country.code }}">{% endif %}</a></td>
+    <td>{% include "manufacturer.html" with manufacturer=object.manufacturer %}</td>
   </tr>
   {% endif %}
   <tr>
@@ -64,7 +62,7 @@
   {% if object.lens_manufacturer is not None %}
   <tr>
     <td>Lens manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.lens_manufacturer.slug %}">{{ object.lens_manufacturer }}</a></td>
+    <td>{% include "manufacturer.html" with manufacturer=object.lens_manufacturer %}</td>
   </tr>
   {% endif %}
 
