--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -34,9 +34,7 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}
-        {% if object.manufacturer.country %}<img src="{{ object.manufacturer.country.flag }}" 
-          alt="{{ object.manufacturer.country.code }}">{% endif %}</a></td>
+    <td>{% include "manufacturer.html" with manufacturer=object.manufacturer %}</td>
   </tr>
   {% endif %}
   <tr>
