--- a/help/templates/faq.html
+++ b/help/templates/faq.html
@@ -8,30 +8,31 @@
 {% block content %}
 <p>This page has answers to frequently asked questions about CameraHub.</p>
 
-<div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+<ul class="list-group list-group-flush">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">What kind of cameras can I catalogue with CameraHub?</h5>
         </div>
         <p class="mb-1">Any kind of still image film camera can be catalogued. CameraHub is not suitable for digital
             cameras or motion picture (movie) cameras.</p>
-    </a>
-    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    </li>
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Can I catalogue digital-era lenses?</h5>
         </div>
         <p class="mb-1">You can add a lens to CameraHub if it works with film cameras, even if it was intended for
             digital cameras. For example, recent Canon EF lenses which were sold with full-frame digital SLRs in mind,
             but which still work with 35mm SLRs.</p>
-    </a>
-    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    </li>
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">I have a suggestion for CameraHub</h5>
         </div>
-        <p class="mb-1">Great! I'd love to hear it. Add an issue on Github or contact us via our Facebook page - icons are below.</p>
-    </a>
+        <p class="mb-1">Great! I'd love to hear it. Add an issue on Github or contact us via our Facebook page - icons
+            are below.</p>
+    </li>
 
-    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">What about language support?</h5>
         </div>
@@ -43,6 +44,6 @@
             <em>Canon EOS 500</em> was marketed as the <em>Canon EOS 500</em> in Europe, Asia and Oceania, as the
             <em>Canon EOS Kiss</em> in Japan and the <em>Canon EOS Rebel XS</em> in America. There is a feature on the
             roadmap to support multiple names for cameras.</p>
-    </a>
-</div>
+    </li>
+</ul>
 {% endblock %}
