--- a/help/templates/faq.html
+++ b/help/templates/faq.html
@@ -28,8 +28,9 @@
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">I have a suggestion for CameraHub</h5>
         </div>
-        <p class="mb-1">Great! I'd love to hear it. Add an issue on Github or contact us via our Facebook page - icons
-            are below.</p>
+        <p class="mb-1">Great! I'd love to hear it. <a href="https://github.com/djjudas21/camerahub/issues">Add an issue
+                on Github</a> or contact us via our <a href="https://www.facebook.com/camerahubapp">Facebook page</a>
+        </p>
     </li>
 
     <li class="list-group-item list-group-item-action flex-column align-items-start">
