Format directory in monospace font

--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -59,7 +59,7 @@
   {% if object.directory is not None %}
   <tr>
     <td>Directory</td>
-    <td>{{ object.directory }}</td>
+    <td><code>{{ object.directory }}</code></td>
   </tr>
   {% endif %}
   {% if object.dev_uses is not None %}
