--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -142,22 +142,21 @@
   {% endif %}
 </table>
 
-<a data-toggle="collapse" href="#collapseNegatives" role="button" aria-expanded="false" aria-controls="collapseNegatives">
-  Negatives</a>
-<div class="collapse" id="collapseNegatives">
-  <table class="table table-hover">
-    <tr>
-      <th>Frame</th>
-      <th>Caption</th>
-      <th>Date</th>
-    </tr>
-    {% for negative in film.negative_set.all %}
-    <tr>
-      <td>{{ negative.frame }}</td>
-      <td>{{ negative.caption }}</td>
-      <td>{{ negative.date }}</td>
-    </tr>
-    {% endfor %}
-  </table>
-</div>
+{% if film.negative_set.all %}
+<h4>Negatives</h4>
+<table class="table table-hover">
+  <tr>
+    <th>Frame</th>
+    <th>Caption</th>
+    <th>Date</th>
+  </tr>
+  {% for negative in film.negative_set.all %}
+  <tr>
+    <td>{{ negative.frame }}</td>
+    <td>{{ negative.caption }}</td>
+    <td>{{ negative.date }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
 {% endblock %}
