--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -42,7 +42,7 @@
   {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
-    <td>{{ object.notes }}</td>
+    <td>{{ object.notes|linebreaks }}</td>
   </tr>
   {% endif %}
   {% if object.own is not None %}
@@ -78,7 +78,7 @@
   {% if object.condition_notes is not None %}
   <tr>
     <td>Condition notes</td>
-    <td>{{ object.condition_notes }}</td>
+    <td>{{ object.condition_notes|linebreaks }}</td>
   </tr>
   {% endif %}
 </table>
