--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -242,7 +242,7 @@
   {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
-    <td>{{ object.notes }}</td>
+    <td>{{ object.notes|linebreaks }}</td>
   </tr>
   {% endif %}
   {% if object.tags.all %}
