--- a/schema/templates/schema/mountadapter_detail.html
+++ b/schema/templates/schema/mountadapter_detail.html
@@ -30,7 +30,7 @@
   {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
-    <td>{{ object.notes }}</td>
+    <td>{{ object.notes|linebreaks }}</td>
   </tr>
   {% endif %}
 </table>
