Add actions to film and restyle existing actions as buttons

--- a/schema/templates/detail.html
+++ b/schema/templates/detail.html
@@ -11,5 +11,5 @@
 
 {% block actions %}
 <h4>Actions</h4>
-<ul>{% block moreactions %}{%endblock%}</ul>
+<ul class="list-unstyled">{% block moreactions %}{%endblock%}</ul>
 {%endblock%}
