--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -90,6 +90,4 @@
 </table>
 {% endblock %}
 
-{% block moreactions %}
-<li>Load film, or something</li>
-{%endblock%}
+{% block moreactions %}{%endblock%}
