Display ISO prefix

--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -15,7 +15,7 @@
   {% if object.filmstock.iso %}
   <tr>
     <td>Box speed</td>
-    <td>{{ object.filmstock.iso }}</td>
+    <td>ISO {{ object.filmstock.iso }}</td>
   </tr>
   {% endif %}
   {% endif %}
@@ -58,7 +58,7 @@
   {% if object.exposed_at is not None %}
   <tr>
     <td>Exposed at</td>
-    <td>{{ object.exposed_at }}</td>
+    <td>ISO {{ object.exposed_at }}</td>
   </tr>
   {% endif %}
 
