Don't allow null disambiguation, to get UniqueConstraint to work

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -42,7 +42,7 @@
     </td>
   </tr>
   {% endif %}
-  {% if object.disambiguation is not None %}
+  {% if object.disambiguation %}
   <tr>
     <td>Disambiguation</td>
     <td>{{ object.disambiguation }}</td>
