--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -31,7 +31,7 @@
     <td>Model</td>
     <td>{{ object.model|aperture }}</td>
   </tr>
-  {% if object.disambiguation is not None %}
+  {% if object.disambiguation %}
   <tr>
     <td>Disambiguation</td>
     <td>{{ object.disambiguation }}</td>
