Add sell action to cameras and lenses

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -90,4 +90,6 @@
 </table>
 {% endblock %}
 
-{% block moreactions %}{%endblock%}
+{% block moreactions %}
+{% if object.own is not False %}<li><a class="btn btn-primary" href="{% url 'camera-sell' object.id_owner %}" role="button">Sell this camera</a></li>{% endif %}
+{%endblock%}
