--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -83,3 +83,7 @@
   {% endif %}
 </table>
 {% endblock %}
+
+{% block moreactions %}
+{% if object.own is not False %}<li><a class="btn btn-primary" href="{% url 'lens-sell' object.id_owner %}" role="button">Sell this lens</a></li>{% endif %}
+{%endblock%}
