--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -44,3 +44,7 @@
   {% endif %}
 </table>
 {% endblock %}
+
+{% block moreactions %}
+<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?negative_size={{ object.id }}" role="button">View camera models with this negative size</a></li>
+{% endblock %}
