--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -86,28 +86,28 @@
     <td><code>{{ object.directory }}</code></td>
   </tr>
   {% endif %}
-  {% if object.dev_uses is not None %}
+  {% if object.developer_previous_uses is not None %}
   <tr>
     <td>Developer uses</td>
-    <td>{{ object.dev_uses }}</td>
+    <td>{{ object.developer_previous_uses }}</td>
   </tr>
   {% endif %}
-  {% if object.dev_time is not None %}
+  {% if object.development_time is not None %}
   <tr>
     <td>Development time</td>
-    <td>{{ object.dev_time }}</td>
+    <td>{{ object.development_time }}</td>
   </tr>
   {% endif %}
-  {% if object.dev_temp is not None %}
+  {% if object.development_temperature is not None %}
   <tr>
     <td>Development temperature</td>
-    <td>{{ object.dev_temp }}°C</td>
+    <td>{{ object.development_temperature }}°C</td>
   </tr>
   {% endif %}
-  {% if object.dev_n is not None %}
+  {% if object.development_compensation is not None %}
   <tr>
     <td>Development compensation</td>
-    <td>N{{ object.dev_n|sign }}</td>
+    <td>N{{ object.development_compensation|sign }}</td>
   </tr>
   {% endif %}
   {% if object.development_notes %}
