--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load static %}
 
 {% block content %}
 <table class="table table-hover">
@@ -30,18 +31,6 @@
     <td>{{ object.light_source }}</td>
   </tr>
   {% endif %}
-  {% if object.acquired is not None %}
-  <tr>
-    <td>Acquired</td>
-    <td>{{ object.acquired }}</td>
-  </tr>
-  {% endif %}
-  {% if object.lost is not None %}
-  <tr>
-    <td>Lost</td>
-    <td>{{ object.lost }}</td>
-  </tr>
-  {% endif %}
   {% if object.introduced is not None %}
   <tr>
     <td>Introduced</td>
@@ -54,13 +43,28 @@
     <td>{{ object.discontinued }}</td>
   </tr>
   {% endif %}
+
+  <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership"> <a
+      href="#">Ownership</a></th>
+  {% if object.acquired is not None %}
+  <tr>
+    <td>Acquired</td>
+    <td>{{ object.acquired }}</td>
+  </tr>
+  {% endif %}
+  {% if object.lost is not None %}
+  <tr>
+    <td>Lost</td>
+    <td>{{ object.lost }}</td>
+  </tr>
+  {% endif %}
   {% if object.cost is not None %}
   <tr>
     <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
   {% endif %}
-  {% if object.lens is not None %}
+  {% if object.lost_price is not None %}
   <tr>
     <td>Lost price</td>
     <td>{{ object.lost_price }}</td>
